--- a/Snakes_and_Ladders.ipynb
+++ b/Snakes_and_Ladders.ipynb
@@ -14,6 +14,7 @@
     }
    ],
    "source": [
+    "#made by Mayank Dubey"
     "import random\n",
     "import sys\n",
     "#sorry I am using sys library beacuse i have having many errors with exit() and quit() in the player typing quit case\n",
@@ -65,7 +66,7 @@
     "    print(\"*\"*70)\n",
     "    sys.exit(0)\n",
     "    \n",
-    "#I know this may not be the best solution but I am new to python and mujhe koi aur tareeka nahi suuj rha tha XD\n",
+    "
     "    \n",
     "####################################################################################################################################\n",
     "def get_dice_value(player):\n",
